set(MODULE RsnSysErr)

set(SRCS
AliRsnTask.cxx
AliRsnSysErr.cxx
)

set(INCLUDE_DIRECTORIES
  ${ROOT_INCLUDE_DIR}
)
include_directories( ${INCLUDE_DIRECTORIES})

set(LINK_DIRECTORIES
  ${ROOT_LIBRARY_DIR}
)
link_directories( ${LINK_DIRECTORIES})

String(REPLACE ".cxx" ".h" HDRS "${SRCS}")
ROOT_GENERATE_DICTIONARY( G__${MODULE} ${HDRS} LINKDEF ${MODULE}LinkDef.h)
list(APPEND SRCS G__${MODULE}.cxx)
  
add_library(${MODULE} SHARED ${SRCS} ${HDRS})
target_link_libraries(${MODULE} ${ROOT_LIBRARIES})

install(TARGETS ${MODULE}
RUNTIME DESTINATION bin COMPONENT RUNTIME
LIBRARY DESTINATION lib COMPONENT RUNTIME
ARCHIVE DESTINATION lib COMPONENT DEVELOPMENT)

